fix(game-option): fix dropdown hover on mobile)

--- a/src/components/GameOption/GameOption.module.scss
+++ b/src/components/GameOption/GameOption.module.scss
@@ -113,6 +113,7 @@
     padding: 8px 12px;
     background: transparent;
     font-size: vars.$font-size-sm;
+    width: 100%;
     color: var(--btn-color-sub);
     cursor: pointer;
 
